syntax = "proto3";
package Mayfair;

import "google/protobuf/any.proto";

option csharp_namespace = "Mayfair.Core.Code.Protocol";

//This should never be modified.
//This is used by the database exporter to store data in a unity format.
message ProtocolDatabaseEnvelope
{
	string exportSource = 1;
    google.protobuf.Any innerMessage = 2;
}



